--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -15,7 +15,7 @@
     <th width="100"><%= t "supplier.actions" %></th>
   </tr>
 
-<% @suppliers.each do |supplier| %>
+<% @supplier.each do |supplier| %>
   <tr align="center">
     <td><%=h supplier.company_name %></td>
     <td><%=h supplier.phone %></td>
