--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -79,7 +79,7 @@
         </td>
       </tr><tr>
         <td  align="right">
-          <%= t "supplier.credit_terms" %>
+          <%= t "supplier.credit_amount" %>
 
         </td>
         <td colspan="2">
