--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
 <h1><%= [t "user.t_title"] %></h1>
+<p>
+  <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"]), new_user_path) %><%= link_to ( t "user.add_new_user"), new_user_path %>
+</p>
 <table border="1" cellpadding="0" cellspacing="0" >
   <tr>
     <th width="100"><%= t "user.number" %></th>
