--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,21 @@
 <p>
-  <b>Username:</b>
+  <b><%= t "user.username" %></b>
   <%=h @user.email %>
 </p>
 
 <p>
-  <b>Email:</b>
+  <b><%= t "global.email" %></b>
   <%=h @user.email %>
 </p>
 <p>
- <b>Role:</b>
-<%= h @user.roles  %>
+ <b><%= t "global.user_type" %>:</b>
+<%= h @user.role_symbols %>
 </p>
 <p>
- <b>Active:</b>
+ <b><%= t "global.active" %></b>
 <%= h @user.active  %>
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to (t "global.edit"), edit_user_path(@user) %> |
+<%= link_to (t "global.back"), users_path %>
