Just plaing about with date formats and layouts

--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -61,6 +61,9 @@
     <%= f.text_field :parts_leadtime_days %>
   </p>
   <p>
+    <%= f.hidden_field :user_id, :value => current_user.username %>
+  </p>
+  <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
