--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,5 +34,5 @@
   </p>
 <% end %>
  <% if permitted_to? :edit, @user %>
-<%= link_to (t "global.back"), users_path %>
+<%= link_to (t "global.cancel"), users_path %>
 <% end %>
