--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,11 @@
-<h1><%= (t "user_t_edit_user") %></h1>
-
+<% if current_user.roles_mask < @user.roles_mask or current_user.id == @user.id %>
+    <h1><%= (t "user_t_edit_user") %></h1>
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
 
   <p>
     <%= f.label t "user.username" %><br />
-    <% if current_user.roles_mask < @user.roles_mask or current_user.id == @user.id %>
+
     <%= f.text_field :username %>  <%= f.label t "user.active" %><%= check_box "user", "active" %>
     <p>
     <%= f.label t "global.email" %><br />
@@ -19,16 +19,39 @@
     <%= f.label t "user.password_confirmation" %><br />
     <%= f.password_field :password_confirmation %>
   </p>
-
-
-        <% else %>
-    <%= f.text_field :username, :size => "15x1", :disabled => "disabled", :class => '' %><%= f.label t "user.active" %><%= check_box "user", "active", :disabled => "disabled" %>
-   <p>
-    <%= f.label t "global.email" %><br />
-    <%= f.text_field :email,  :disabled => "disabled" %>
+  <p>
+    <%= f.label :address %><br />
+    <%= f.text_area :address, :rows => 5 %>
   </p>
-  <% end %>
-  
+  <p>
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </p>
+  <p>
+    <%= f.label :state %><br />
+    <%= f.text_field :state, :size => 6 %>
+  </p>
+  <p>
+    <%= f.label :zip %><br />
+    <%= f.text_field :zip, :size => 6 %>
+  </p>
+  <p>
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone %>
+  </p>
+  <p>
+    <%= f.label :mobile %><br />
+    <%= f.text_field :mobile %>
+  </p>
+  <p>
+    <%= f.label :fax %><br />
+    <%= f.text_field :fax %>
+  </p>
+    <p>
+    <%= f.label :notes %><br />
+    <%= f.text_area :notes, :rows => 6 %>
+  </p>
+
   <p>
      <% if permitted_to? :destroy, @user %>
 <%= f.label :roles %><br />
@@ -38,11 +61,123 @@
     <% end %>
     <%= hidden_field_tag "user[roles][]", "" %>
         <% end %>
-  </p> 
+  </p>
   <p>
     <%= f.submit t "global.submit" %>
   </p>
 <% end %>
+
+        <% else %>
+    <h1><%= (t "user.t_view") %></h1>
+    <table>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "user.username" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.username %>
+    </td>
+</tr>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.email" %>:</strong>
+    </td>
+    <td align="left">
+     <%= auto_link_email_addresses( @user.email ) %>
+    </td>
+  </tr>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "user.name" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.name %>
+    </td>
+</tr>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.role" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.role_symbols %>
+    </td>
+</tr>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.active" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.active %>
+    </td>
+</tr>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.address" %>:</strong>
+    </td>
+    <td align="left">
+      <%=h @user.address %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.city" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.city %>
+    </td>
+  </tr>
+ <tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.state" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.state %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.zip" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.zip %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.phone" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.phone %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t"global.mobile" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.mobile %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t"global.fax" %>:</strong>
+    </td>
+    <td align="left">
+     <%=h @user.fax %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t "global.notes" %>:</strong>
+    </td>
+    <td align="left" >
+     <textarea rows="6" cols="50" name="contact" readonly="readonly" ><%=h @user.notes  %></textarea>
+    </td>
+  </tr>
+</table>
+
+  <% end %>
+
  <% if permitted_to? :edit, @user %>
 <%= link_to (t "global.cancel"), users_path %>
 <% end %>
