Added new logo and some design fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <table width="100%">
   <tr align="center">
     <td>
-      <%= image_tag 'rails.png', :height => 100 %>
+      <%= image_tag 'logo.png', :height => 60 %>
     </td>
   </tr>
 </table>
