--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -98,7 +98,7 @@ a {
 #user_nav {
     text-align: center;
     padding:inherit;
-    background-color:antiquewhite;
+    background-color:#ccccff;
     font-size:12px;
 
 }
