--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,10 @@
     <h1><%= (t "user_t_edit_user") %></h1>
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
-
+  <p>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </p>
   <p>
     <%= f.label t "user.username" %><br />
 
@@ -50,6 +53,10 @@
     <p>
     <%= f.label :notes %><br />
     <%= f.text_area :notes, :rows => 6 %>
+  </p>
+  <p>
+    <%= hidden_field_tag "user[edited_at]", Time.now %>
+    <%= hidden_field_tag "user[edited_by]", current_user.username %>
   </p>
 
   <p>
