--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -2,12 +2,15 @@
 
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
-
   <p>
-    <%= f.label t "user.username" %><br />
-    <%= f.text_field :username %>  <%= f.label t "user.active" %><%= check_box "user", "active" %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label t "user.username" %><br />
+
+    <%= f.text_field :username %>  <%= f.label t "user.active" %><%= check_box "user", "active" %>
+    <p>
     <%= f.label t "global.email" %><br />
     <%= f.text_field :email %>
   </p>
@@ -19,8 +22,46 @@
     <%= f.label t "user.password_confirmation" %><br />
     <%= f.password_field :password_confirmation %>
   </p>
-  <p><% if permitted_to? :destroy, @user %>
-    <%= f.label :roles %><br />
+  <p>
+    <%= f.label :address %><br />
+    <%= f.text_area :address, :rows => 5 %>
+  </p>
+  <p>
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </p>
+  <p>
+    <%= f.label :state %><br />
+    <%= f.text_field :state, :size => 6 %>
+  </p>
+  <p>
+    <%= f.label :zip %><br />
+    <%= f.text_field :zip, :size => 6 %>
+  </p>
+  <p>
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone %>
+  </p>
+  <p>
+    <%= f.label :mobile %><br />
+    <%= f.text_field :mobile %>
+  </p>
+  <p>
+    <%= f.label :fax %><br />
+    <%= f.text_field :fax %>
+  </p>
+    <p>
+    <%= f.label :notes %><br />
+    <%= f.text_area :notes, :rows => 6 %>
+  </p>
+  <p>
+    <%= hidden_field_tag "user[edited_at]", Time.now %>
+    <%= hidden_field_tag "user[edited_by]", current_user.username %>
+  </p>
+
+  <p>
+     <% if permitted_to? :destroy, @user %>
+<%= f.label :roles %><br />
     <% for role in User::ROLES %>
       <%= check_box_tag "user[roles][]", role, @user.roles.include?(role) %>
       <%=h role.humanize %><br />
