--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,10 @@
     <%= f.text_field :username %>
   </p>
   <p>
+    <%= f.label t "user.name_eg" %><br />
+    <%= f.text_field :name %>
+  </p>
+  <p>
     <%= f.label t "global.email" %><br />
     <%= f.text_field :email %>
   </p>
@@ -21,7 +25,35 @@
     <%= f.password_field :password_confirmation %>
   </p>
   <p>
-    <% if permitted_to? :destroy, User.new %>
+    <%= f.label :address %><br />
+    <%= f.text_area :address, :rows => 5 %>
+  </p>
+  <p>
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </p>
+  <p>
+    <%= f.label :state %><br />
+    <%= f.text_field :state, :size => 6 %>
+  </p>
+  <p>
+    <%= f.label :zip %><br />
+    <%= f.text_field :zip, :size => 6 %>
+  </p>
+  <p>
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone %>
+  </p>
+  <p>
+    <%= f.label :mobile %><br />
+    <%= f.text_field :mobile %>
+  </p>
+  <p>
+    <%= f.label :fax %><br />
+    <%= f.text_field :fax %>
+  </p>
+  <p>
+     <% if permitted_to? :destroy, @user %>
 <%= f.label :roles %><br />
     <% for role in User::ROLES %>
       <%= check_box_tag "user[roles][]", role, @user.roles.include?(role) %>
