Updated heaps of things...User access is under control now.Added logs to users and supplier to track changes and edit/ creation info. More I18n fixes..Learning more about how great Ruby and Rails are..

--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -61,7 +61,8 @@
     <%= f.text_field :parts_leadtime_days %>
   </p>
   <p>
-    <%= f.hidden_field :user_id, :value => current_user.username %>
+    <%= hidden_field_tag "supplier[edited_by]", current_user.username %>
+    <%= hidden_field_tag "supplier[edited_at]", Time.now %>
   </p>
   <p>
     <%= f.submit 'Update' %>
