--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -120,8 +120,10 @@
         </td>
       </tr>
       <tr>
-        <td >
-          <%= f.hidden_field :user_id, :value => current_user.username %>
+        <td>
+          <%= hidden_field_tag "supplier[created_by]", current_user.username %>
+          <%= hidden_field_tag "supplier[created_at]", Time.now %>
+
         </td>
       </tr>
       <tr>
