--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -113,10 +113,12 @@
       <strong><%= t "global.created_at" %>:</strong>
     </td>
     <td align="left">
-      <%= time_ago_in_words(@user.created_at) %> <%= t "global.ago" %> (<%= localize @user.created_at, :format => :short  %>) <%= t "global.by" %> <%= @user.edited_by %>.
+      <%= time_ago_in_words(@user.created_at) %> <%= t "global.ago" %> (<%= localize @user.created_at, :format => :short  %>) <%= t "global.by" %> <%= @user.created_by %>.
     </td>
   </tr>
-<tr>
+  <% if @user.edited_at == nil %>
+      <% else %>
+  <tr>
     <td colspan="2" align="right">
       <strong><%= t "global.updated_at" %>:</strong>
     </td>
@@ -124,13 +126,14 @@
       <%= time_ago_in_words(@user.edited_at) %> <%= t "global.ago" %> (<%= localize @user.edited_at, :format => :short  %>) <%= t "global.by" %> <%= @user.edited_by %>.
     </td>
   </tr>
+      <% end %>
   <tr>
     <td colspan="2" align="right">
       <strong><%= t "user.account_accessed" %>:</strong>
     </td>
     <td align="left">
       <% if @user.login_count == 0 %>
-          <%= "User has not logged in yet" %>
+          <%= t "user.not_logged_in_yet" %>
           <% else %>
           <% if @user.login_count == 1 %>
               <%= time_ago_in_words(@user.last_request_at) %> <%= t "global.ago" %> (<%= localize @user.last_request_at, :format => :short  %>) <%= t "global.from" %> <%= @user.current_login_ip %>
@@ -140,9 +143,23 @@
           <% end %>
           <% end %>
           <% end %>
-
-
-          </td>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
+      <strong><%= t "user.login_failures" %>:</strong>
+    </td>
+    <td align="left">
+      <%= @user.failed_login_count %>
+    </td>
+  </tr>
+<tr>
+    <td colspan="2" align="right">
+      <strong><%= t "user.login_count" %>:</strong>
+    </td>
+    <td align="left">
+      <%= @user.login_count %>
+    </td>
   </tr>
 
 </table><br>
